# game_engine_raylib

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  GameEngineRayLib.code-workspace  README.md  critical_bugs_and_performance_analysis.md  run_python_tests.sh
GameEngine/: .gitignore  CI_BUILD_FIXES_COMPLETE.md  CI_FIXES_SUMMARY.md  CLAUDE.md  CMakeLists.txt  clean_all_test_projects.py  config.json  critical_bugs_and_performance_analysis.md  full_test_fixed.sh  performance_analysis_report.md  prompt_plan.md  rebuild.sh  rebuild_fast.sh  rebuild_incremental.sh  rebuild_smart.sh  remove_test_projects.py  simple_build_test.txt  test_default_texture.cpp  test_default_texture.sh  test_entity_data.py  test_packages.txt  test_plugin_cmake_build  test_plugin_security  test_plugin_system_integration  test_resource_simple
GameEngine/.deps_cache/entt-subbuild/: CMakeLists.txt
GameEngine/.deps_cache/glm-subbuild/: CMakeLists.txt
GameEngine/.deps_cache/json-subbuild/: CMakeLists.txt
GameEngine/.deps_cache/raylib-subbuild/: CMakeLists.txt
GameEngine/.deps_cache/spdlog-subbuild/: CMakeLists.txt
GameEngine/cmake/: TestDiscovery.cmake
GameEngine/docs/: BUILD_SYSTEM.md  BUILD_TROUBLESHOOTING.md  CLI_SYSTEM.md  LOG_CONTROL.md  PLAY_MODE.md  TEST_LOGGING.md  package_schema.json
GameEngine/examples/: platformer_example.cpp
GameEngine/patches/: README.md  apply-patches.cmake  raylib-cmake-fix.patch
GameEngine/runtime/: game_runtime.cpp  game_runtime.h
GameEngine/scripts/: auto_format.py  format_all.sh  rebuild_project.lua
GameEngine/src/: create_test_sprite.cpp  engine.cpp  engine.h  main.cpp
GameEngine/src/cli/: cli_argument_parser.cpp  cli_argument_parser.h  cli_engine.cpp  cli_engine.h  cli_result.h
GameEngine/src/components/: camera.h  sprite.h  transform.h  transform_component.h
GameEngine/src/console/: command_processor.cpp  command_processor.h  command_registry.h  console.cpp  console.h
GameEngine/src/core/: component_types.h
GameEngine/src/engine/: command_registry.cpp  command_registry.h  command_registry_build.cpp  command_registry_engine.cpp  command_registry_entity.cpp  command_registry_package.cpp  command_registry_project.cpp  command_registry_scene.cpp  engine_core.cpp  engine_core.h  play_mode.cpp  play_mode.h  systems_manager.cpp  systems_manager.h
GameEngine/src/game/: demo_game.cpp  demo_game.h
GameEngine/src/math/: math_utils.h
GameEngine/src/plugins/: plugin_api.cpp  plugin_api.h  plugin_interface.h  plugin_manager.cpp  plugin_manager.h
GameEngine/src/project/: project.cpp  project.h  project_manager.cpp  project_manager.h  project_validator.cpp  project_validator.h
GameEngine/src/render/: sprite_batch.cpp  sprite_batch.h
GameEngine/src/resources/: resource_manager.cpp  resource_manager.h
GameEngine/src/scene/: scene.cpp  scene.h
GameEngine/src/scripting/: example_game_logic.cpp  example_game_logic.cpp.example  game_logic_interface.h  game_logic_manager.cpp  game_logic_manager.h  lua_bindings.cpp  lua_bindings.h  plugin_api.h  plugin_manager.cpp  plugin_manager.h  script_manager.cpp  script_manager.h  script_manager_stub.cpp
GameEngine/src/serialization/: component_registry.cpp  component_registry.h  dynamic_component_registry.cpp  dynamic_component_registry.h  scene_serializer.cpp  scene_serializer.h
GameEngine/src/systems/: empty_render_system.cpp  optional_render_system.cpp  optional_render_system.h  render_system.cpp  render_system.h  render_system_base.h  sprite_batch.cpp  sprite_batch.h  system.h
GameEngine/src/utils/: config.cpp  config.h  engine_paths.cpp  engine_paths.h  file_utils.cpp  file_utils.h  log_limiter.h  path_utils.cpp  path_utils.h  process_executor.cpp  process_executor.h  string_utils.cpp  string_utils.h
GameEngine/templates/basic/: CMakeLists_fast.txt  CMakeLists_template.txt  game_template.cpp
GameEngine/templates/basic/scenes/: main_scene.json
GameEngine/tests/: .gitignore  BUILD_TEST_INSTRUCTIONS.md  README.md  basic_cli_test.txt  build_cache_manager.py  check_build_output.py  check_template.py  clean_test_data.py  clean_test_executables.sh  cleanup_demo_files.py  cleanup_utils.py  cli_commands_reference.md  compile_and_run_tests.sh  compile_and_run_tests_new.sh  cpp_test_results.json  cpp_test_runner.cpp  cpp_test_runner.h  debug_build.sh  debug_build_test.py  debug_paths.py  emergency_stop.sh  game  manual_build_test.txt  manual_headless_test.sh  parallel_test_runner.py  resource_limits.json  run_all_tests.py  run_cpp_test_suite.sh  run_cpp_tests.cpp  run_python_tests.py  run_tests_safe.sh  temp_run_single_test.sh  test_analyze_issues.py  test_artifact_paths.py  test_async_build_thread_safety.cpp  test_async_build_threading.cpp  test_async_build_threading_stub.cpp  test_auto_formatter.py  test_build_batch.txt  test_build_cache_validation.py  (+103 more)
GameEngine/tests/fixtures/: README.md
GameEngine/tests/fixtures/assets/: README.md
GameEngine/tests/fixtures/configs/: README.md
GameEngine/tests/integration/: README.md
GameEngine/tests/integration/cli/: README.md  basic_cli_test_safe.txt  test_cli_basic.py  test_cli_json.py  test_command_injection_simple.py  test_console_autocompletion.cpp  test_entities.txt
GameEngine/tests/scripts/: test.lua
GameEngine/tests/system/: README.md
GameEngine/tests/system/e2e/: README.md
GameEngine/tests/system/performance/: README.md
GameEngine/tests/system/platform/: README.md
GameEngine/tests/system/security/: README.md
GameEngine/tests/templates/basic/: CMakeLists_fast.txt  CMakeLists_template.txt  project_template.json
GameEngine/tests/tools/: README.md
GameEngine/tests/unit/: README.md
GameEngine/tests/unit/ecs/: README.md  test_engine_init.cpp  test_entity_create_returns_id.py  test_exception_safety.cpp  test_game_logic_system.cpp  test_render_system_batching.cpp  test_render_system_null_pointer.cpp  test_sprite_batch.cpp  test_sprite_batch_rendering.cpp
GameEngine/tests/unit/resources/: README.md  test_default_texture_manager.cpp  test_resource_functionality.cpp  test_resource_manager_headless.cpp  (+14 more)
GameEngine/tests/utils/: README.md
(+51 files in other folders)
